# tajrobekon

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .python-version  README.md  example.env  manage.py  pyproject.toml  requirements.txt
apps/authentication/: apps.py  models.py  urls.py
apps/authentication/api/: serializers.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/authentication/templates/authentication/: login.html
apps/experience/: admin.py  apps.py  models.py  urls.py
apps/experience/api/: serializers.py  views.py
apps/experience/graphql/: root.py  types.py
apps/experience/migrations/: 0001_initial.py  0002_auto_20211230_2025.py  0003_auto_20220106_1856.py  0004_auto_20220209_0119.py
apps/index/templates/index/: index.html
config/: asgi.py  settings.py  urls.py  wsgi.py
config/graphql/: schema.py  view.py
locale/fa/LC_MESSAGES/: django.po
