[tool.poetry]
name = "tajrobekon"
version = "0.1.0"
description = "Experience sharing platform"
authors = ["Danial Keimasi <danialkeimasi@gmail.com>", "Niloofar Makari <niloofarmakari77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
django-configurations = "^2.3.1"
dj-database-url = "^0.5.0"
django-extensions = "^3.1.5"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^5.0.0"
djangorestframework-api-key = "^2.1.0"
psycopg2-binary = "^2.9.3"
graphene-django = "^2.15.0"
django-cachalot = "^2.5.0"
graphene-django-optimizer = "^0.8"
drf-spectacular = "^0.21.2"
django-debug-toolbar = "^3.2.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pre-commit = "^2.15.0"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
